<resources>

    <string name="app_name">Sample Application</string>
    <string name="api_key">YOUR API KEY</string>
    <string name="api_secret">YOUR API SECRET</string>
    <string name="processing_message">Processing Your Request....</string>
    <string name="no_image_selected_message">Please Capture or Select an Image to Proceed</string>
    <string name="upload_success_message">Image Uploaded Successfully!</string>
    <string name="upload_failure_message">Image Uploading Failed!</string>
    <string name="recognization_failure_message">Image Cannot be Recognized. Please Try Again!</string>
    <string name="chooser_title">Take Image From:</string>
    <string name="image_recognized_as">Image Recognized as:\u0020</string>
    <string name="param_image">image_request[image]</string>
    <string name="param_locale">image_request[locale]</string>
    <string name="en_us">en-US</string>
    <string name="image_name">image.jpeg</string>
    <string name="auth_header">Authorization</string>
    <string name="capture_image">Capture Image</string>
    <string name="send_image">Send Image To Server</string>
    <string name="api_key_label">API Key:</string>
    <string name="secret_label">Secret:</string>

</resources>
